--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,27 +53,27 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
 
-    //Glide
+    // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
-    //Retrofit
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
-    //LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
-    //Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    //Fragment
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation "androidx.fragment:fragment-ktx:1.4.1"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0"
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
+    // Fragment
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
+    implementation "androidx.fragment:fragment-ktx:1.5.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.0"
     // OkHttp
-    implementation("com.squareup.okhttp3:okhttp:4.9.3")
-    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
-    //ViewPager2
+    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.10")
+    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10")
+    // ViewPager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     // Hilt
     implementation "com.google.dagger:hilt-android:2.41"
@@ -83,5 +83,8 @@ dependencies {
     // Circle Indicator (To fix the xml preview "Missing classes" error)
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'org.imaginativeworld.whynotimagecarousel:whynotimagecarousel:2.1.0'
+    // Room
+    implementation "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
 
 }
