--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+    kapt 'com.github.bumptech.glide:compiler:4.14.2'
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -81,7 +81,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.44.2"
     // Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
-    // Circle Indicator (To fix the xml preview "Missing classes" error)
+    // Carousel
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'org.imaginativeworld.whynotimagecarousel:whynotimagecarousel:2.1.0'
     // Room
