--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    kapt { correctErrorTypes true }
 }
 
 dependencies {
@@ -79,6 +80,7 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44.2"
     kapt "com.google.dagger:hilt-android-compiler:2.44.2"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
     // Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     // Carousel
