--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:'
-    testImplementation "io.mockk:mockk:1.12.3"
-    testImplementation 'junit:junit:'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
 
     // Glide
@@ -92,5 +85,17 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.3"
     //Paging
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
+    testImplementation 'junit:junit:'
+    testImplementation "io.mockk:mockk:1.12.3"
+    testImplementation 'junit:junit:'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //Hamcrest
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+
 
 }
