--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,14 @@ dependencies {
 
     //Hamcrest
     testImplementation 'org.hamcrest:hamcrest:2.2'
+//    //Arch Comp
+//    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+//    //coroutines test
+//    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+//    //Mock Web Server
+//    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+//    //Mockito
+//    testImplementation 'org.mockito:mockito-core:4.11.0'
 
 
 }
