--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,8 +87,6 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
 
     testImplementation 'junit:junit:'
-    testImplementation "io.mockk:mockk:1.12.3"
-    testImplementation 'junit:junit:'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -104,6 +102,8 @@ dependencies {
 //    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
 //    //Mockito
 //    testImplementation 'org.mockito:mockito-core:4.11.0'
+    //Mockk
+    testImplementation "io.mockk:mockk:1.13.3"
 
 
 }
