--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     kapt 'com.github.bumptech.glide:compiler:4.14.2'
@@ -89,9 +88,8 @@ dependencies {
     testImplementation 'junit:junit:'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
+    // Local Unit Tests
+    testImplementation "com.google.truth:truth:1.1.3"
     //Hamcrest
     testImplementation 'org.hamcrest:hamcrest:2.2'
 //    //Arch Comp
@@ -105,5 +103,13 @@ dependencies {
     //Mockk
     testImplementation "io.mockk:mockk:1.13.3"
 
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    // Instrumented Unit Tests
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.3"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0" //1.2.1
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
 
 }
