--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     // RecyclerView Animators
     implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+    // Swipe to refresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     testImplementation 'junit:junit:'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
