--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation "androidx.fragment:fragment-ktx:1.5.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
-    // OkHttp
-    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.10")
-    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10")
+//    // OkHttp
+//    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.10")
+//    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10")
     // ViewPager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     // Hilt
@@ -96,14 +96,14 @@ dependencies {
     testImplementation "com.google.truth:truth:1.1.3"
     //Hamcrest
     testImplementation 'org.hamcrest:hamcrest:2.2'
-//    //Arch Comp
-//    testImplementation 'androidx.arch.core:core-testing:2.1.0'
-//    //coroutines test
-//    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
-//    //Mock Web Server
-//    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
-//    //Mockito
-//    testImplementation 'org.mockito:mockito-core:4.11.0'
+    //Arch Comp
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    //coroutines test
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    //Mock Web Server
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+    //Mockito
+    testImplementation 'org.mockito:mockito-core:4.11.0'
     //Mockk
     testImplementation "io.mockk:mockk:1.13.3"
 
