Upgrade AGP dependency from 7.4.2 to 8.0.0 Upgrade Gradle version to 8.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
         viewBinding true
     }
     kapt { correctErrorTypes true }
+    namespace 'com.moviemain'
 }
 
 dependencies {
